# kaggle_mcp

./: README.md  _dev.out  client_test.py  main.py  mcp_server.py  pyproject.toml  smoke_test.py
outputs/: train_Survived_classification_predictions.csv
